[package]
name = "habbes-minigrep-exercise"
version = "0.1.0"
edition = "2021"
description = "Utility for search files. Made this while learning Rust. Do not use it in production."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
